kind/networking/ingress/project/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: backend-depl
  namespace: nginx-ns

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shaad98/k8s-user-management:vs2
        ports:
        - containerPort: 8080
