kind/networking/ingress/project/nginx-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-depl
  namespace: nginx-ns

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
