kind/networking/ingress/project/postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: postgres-depl
  namespace: nginx-ns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 80
        volumeMounts:
        - name: my-volume
          mountPath: /var/lib/postgresql
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
