kind/networking/ingress/project/backend-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: backend-service
  namespace: nginx-ns

spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
