kind/networking/ingress/project/nginx-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: nginx-service
  namespace: nginx-ns

spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
