kind/networking/ingress/project/postgres-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: postgres-service
  namespace: nginx-ns

spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
